// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TAPReporter with default options with all results under budget writes to output stream with results 1`] = `
"1..4
ok 1 - 3.97KB < 4KB
ok 2 - 3.97KB < 4KB
ok 3 - 3.94KB < 4KB
ok 4 - 3.94KB < 4KB
"
`;

exports[`TAPReporter with default options with multiple results over budget writes to output stream with results 1`] = `
"1..4
ok 1 - 3.97KB < 4KB
not ok 2 - 4.13KB >= 4KB
not ok 3 - 4.16KB >= 4KB
not ok 4 - 4.13KB >= 4KB
"
`;

exports[`TAPReporter with default options with no results writes to output stream with results 1`] = `""`;

exports[`TAPReporter with default options with one result over budget writes to output stream with results 1`] = `
"1..2
ok 1 - 3.97KB < 4KB
not ok 2 - 4.13KB >= 4KB
"
`;

exports[`TAPReporter with output stream with all results under budget writes to output stream with results 1`] = `
"1..4
ok 1 - 3.97KB < 4KB
ok 2 - 3.97KB < 4KB
ok 3 - 3.94KB < 4KB
ok 4 - 3.94KB < 4KB
"
`;

exports[`TAPReporter with output stream with multiple results over budget writes to output stream with results 1`] = `
"1..4
ok 1 - 3.97KB < 4KB
not ok 2 - 4.13KB >= 4KB
not ok 3 - 4.16KB >= 4KB
not ok 4 - 4.13KB >= 4KB
"
`;

exports[`TAPReporter with output stream with no results writes to output stream with results 1`] = `""`;

exports[`TAPReporter with output stream with one result over budget writes to output stream with results 1`] = `
"1..2
ok 1 - 3.97KB < 4KB
not ok 2 - 4.13KB >= 4KB
"
`;
